spacing issues fix css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,9 +11,4 @@
  *= require_self
  *= require_tree .
  */
- html {
- 	background:#ffffff;
- 	padding-left:60px;
- 	padding-right:60px; 
- }
 
